--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,11 +3,13 @@
   text-align: center;
 }
 
-.label-signup{
+/* 入力フォーム */
+
+.label-signup {
   margin-top: 5px;
 }
 
-.btn-signup{
+.btn-signup {
   margin-top: 10px;
 }
 
