--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,5 @@
+/* ユーザー情報テーブル */
+
 .user-table {
   vertical-align: middle;
   text-align: center;
@@ -19,4 +21,12 @@
 
 .btn-user--edit {
   margin-top: 10px;
+}
+
+/* ユーザー一覧ページ */
+
+#table-users {
+  td {
+    vertical-align: middle;
+  }  
 }
