--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,4 @@
 <% provide(:title, @user.name) %>
-<h1><%= @user.name %>, <%= @user.email %></h1>
-<% provide(:title, @user.name) %>
 <div>
   <table class="table table-bordered table-condensed user-table">
     <tr>
@@ -11,7 +9,7 @@
     </tr>
 
     <tr>
-      <td>所属</td>
+      <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
       <td>名前：<%= @user.name %></td>
       <td>出勤日数</td>
       <td>月末日</td>
